# barsic-bot

./: .dockerignore  .env.dev  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE.md  Makefile  Pipfile  README.md  SECURITY.md  barsic_bot.sh  bot.py  callbacks.py  config.py  config.yaml  config.yaml.example  constants.py  docker-compose-dev.yml  helpers.py  main.py  misc.py  pyproject.toml  states.py  test.py  utils.py
.github/workflows/: pull_request.yml  tag.yml
core/: settings.py
filters/: auth.py  chat_type.py
gateways/: base.py  client.py
handlers/: __init__.py  default_handler.py  general_commands.py  info_menu.py  main_menu.py  report_menu.py  reports_handler.py  service_distribution_menu.py  start.py
keyboards/: simple_row.py
middlewares/: blocked_user.py  chat_action.py
repositories/: redis_repo.py
schemas/: report.py
