[project]
name = "barsic-bot"
version = "1.0.0"
description = ""
authors = [{ name = "Ivan Bazhenov", email = "bazhenov.in@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiogram>=3.4.1,<4.0.0",
    "emoji>=2.10.1,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "uvicorn>=0.29.0,<0.30.0",
    "aiogram-dialog>=2.1.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "redis>=5.0.3,<6.0.0",
    "orjson>=3.10.3,<4.0.0",
]

[tool.poetry]
package-mode = false

[dependency-groups]
linters = ["ruff>=0.11.2,<0.12.0"]
types = ["mypy>=1.15.0,<2.0.0"]

[tool.pytest.ini_options]
addopts = "-rfs"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning:",
    "ignore:getName() is deprecated:DeprecationWarning",
    "ignore:currentThread() is deprecated:DeprecationWarning"
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["tests", "migrations"]


[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (imports)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
  "RUF", # Ruff rules
  "PL",  # Pylint-inspired rules
]
ignore = [
    "W191", # Tabs (use formatter to normalize)
    "B904",
    "B008",
    "PLR2004",
    "RUF012",
    "RUF003",
    "RUF002",
    "PLR0913",
    "PLR0912",
    "RUF001",
    "PLW2901",
    "PLR0915",
    "PLE1205",
    "B024",
    "SIM105",
    "SIM113",
]


[tool.ruff.lint.pylint]
max-statements = 150


[tool.ruff.lint.mccabe]
max-complexity = 50


[tool.mypy]
python_version = "3.11"
packages = ["source"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
follow_imports = "silent"
warn_return_any = false
warn_unused_configs = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "migrations",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "tests",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
